Fix: class article modified on css, adjust the wrong margin

--- a/Practica06css/css/estilos.css
+++ b/Practica06css/css/estilos.css
@@ -61,11 +61,9 @@ nav img {
 .grid-banner{
     display: grid;
     grid-template-columns: repeat(1,1fr);
-    width: 100%;
     height: 200px;
     text-align: center;
     background-color: rgba(218, 219, 241, 255);
-    padding: 40px;
 }
 .grid-banner h1 {
     font-size: 2.5em;
@@ -113,7 +111,7 @@ article {
     background-color: #fff;
     display: flex;
     width: 100%;
-    margin: 0px 20px;
+    margin: 0px auto;
 }
 article a{
     text-decoration: none;
